# k4s

./: .gitignore  Cargo.toml  inctest.k4sm  inctest2.k4sm  rusttest.k4sm  std.k4sm  test.k4sm  test2.k4sm
k4s/: Cargo.toml
k4s/src/: lib.rs
k4sm/: Cargo.toml
k4sm/src/: llvm.rs  main.rs  tests.rs
k4sm/src/llvm/: mod.rs  parse_instr.rs  parse_operand.rs  pool.rs  regpool.rs  ssa.rs
k4svm/: Cargo.toml
k4svm/src/: boot.rs  main.rs  tests.rs
rusttest/: Cargo.toml  bulld.sh  rust_toolchain  rusttest.bc
rusttest/.cargo/: config.toml  x86_64-kados.json
rusttest/src/: lib.rs
