[package]
name = "k4sm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k4s = { path = "../k4s" }
nom = "7.1.3"
llvm-ir = { version = "0.8.2", features = ["llvm-13"] }
llvm-ir-analysis = { version = "0.3.1", features = ["llvm-13"] }
glob = "0.3.1"