[package]
name = "rusttest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusttest"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]

[profile.release]
opt-level = 3
panic = "abort"

[profile.dev]
panic = "abort"